<resources>
    <!--货主端-->
    <string name="app_name">鲜鲜拉货主版</string>

    <string name="paizhao">拍照</string>
    <string name="xiangce">相册</string>
    <string name="tiaoguo">跳过</string>
    <string name="quanbutixian"><u>全部提现</u></string>
    
    <!--系统提示-->
    <string name="app_prompt">提示</string>
    <string name="app_submit">提交</string>
    <string name="app_submit_true">提交成功</string>
    <string name="app_confirm">确认</string>
    <string name="app_confirm_true">确认更新</string>
    <string name="app_cancel">取消</string>
    <string name="app_nomore">没有更多了</string>
    <string name="app_re_register">账户登录过期，请重新登录</string>
    <string name="app_out">再按一次退出程序</string>
    <string name="app_imgerr">图片压缩失败</string>
    <string name="app_change_true">修改成功</string>
    <string name="app_setup_true">设置成功</string>
    <string name="app_card">请确认已经插入SD卡</string>
    <string name="app_iscancel">确认取消吗？</string>
    <string name="app_jsonerr">数据解析错误</string>
    <string name="app_file">图片已经保存到手机根目录</string>
    <string name="app_yes">是</string>
    <string name="app_no">否</string>

    <!--验证码-->
    <string name="app_sendcode">获取验证码</string>
    <string name="app_sendcode_hint">验证码发送成功</string>
    <string name="app_sendcode_hint1">正在获取验证码，请稍后...</string>
    <string name="app_reacquirecode">重新获取</string>
    <string name="app_codethen">s后获取</string>

    <!--单位-->
    <string name="app_tian">天</string>
    <string name="app_qiang">抢</string>
    <string name="app_ren">人</string>
    <string name="app_mei">枚</string>
    <string name="app_yuan">元</string>
    <string name="app_ge">个</string>
    <string name="app_bei">倍</string>
    <string name="app_ji">级</string>
    <string name="app_chang">场</string>
    <string name="app_shi">h</string>
    <string name="app_fen">m</string>
    <string name="app_miao">s</string>

    <!--筛选-->
    <string name="app_type_quanbu">全部</string>
    <string name="app_type_zhuangtai">状态</string>
    <string name="app_type_bizhong">币种</string>
    <string name="app_type_ETH">ETH</string>
    <string name="app_type_CHO">CHO</string>
    <string name="app_type_CNY">CNY</string>
    <string name="app_type_paixu">排序</string>
    <string name="app_type_leixing">类型</string>
    <string name="app_type_daishenhe">待审核</string>
    <string name="app_type_yitongguo">已通过</string>
    <string name="app_type_weitongguo">未通过</string>
    <string name="app_type_jiangxu">降序</string>
    <string name="app_type_shengxu">升序</string>
    <string name="app_type_jinxingzhong">进行中</string>
    <string name="app_type_yiwancheng">已完成</string>
    <string name="app_type_ansuanli">按算力</string>
    <string name="app_type_anshijian">按时间</string>
    <string name="app_type_daijihuo">待激活</string>
    <string name="app_type_yiijihuo">已激活</string>
    <string name="app_type_yijiangli">已奖励</string>
    <string name="app_type_zhuanchu">转出</string>
    <string name="app_type_zhuanru">转入</string>

    <!--刷新和加载-->
    <string name="app_loading">正在加载...</string>
    <string name="app_loading1">正在提交数据...</string>
    <string name="app_nodata">暂无数据</string>
    <string name="app_reload">没有数据</string>
    <string name="app_reload1">加载出错</string>
    <string name="app_abheader_refresh">下拉刷新</string>
    <string name="app_abheader_refreshtime">刷新时间：</string>
    <string name="app_abheader_refreshtlastime">上次刷新时间：</string>
    <string name="app_abheader_refreshletgo">松开刷新</string>
    <string name="app_abheader_refreshing">正在刷新...</string>
    <string name="app_abheader_refreshnowtime">本次刷新时间：</string>
    <string name="app_abfooter_loadmore">载入更多</string>
    <string name="app_abfooter_loading">正在加载...</string>
    <string name="app_abfooter_loadno">没有了！</string>
    <string name="app_abfooter_loadnodata">没有数据</string>
    <string name="app_err">网络开小差了，刷新试试</string>
    <string name="app_err1">数据出错了！</string>
    <string name="app_refresh">刷新</string>
    <string name="app_refresh1">分钟前</string>
    <string name="app_refresh2">小时前</string>
    <string name="app_refresh3">天前</string>
    <string name="app_refresh4">刚刚</string>
    <string name="app_refresh5">松开载入更多</string>
    <string name="app_refresh6">查看更多</string>

    <!--底部栏-->
    <string name="fragment1">首页</string>
    <string name="fragment1_u1"><u>点击查看明细</u></string>

    <string name="fragment2">订单</string>
    <string name="fragment3">我的</string>
    <string name="fragment4">充币</string>
    <string name="fragment5">我的</string>

    <string name="fragment5_u1"><u>立即发布给附近所有司机</u></string>
    <string name="shishiwendu"><u>查看实时温度</u></string>

    <!--自动更新提示框-->
    <string name="update_hint">版本更新</string>
    <string name="update_hint1">SD卡不可用，请插入SD卡</string>
    <string name="update_hint2">已是最新版本</string>
    <string name="update_hint3">正在下载</string>
    <string name="update_hint4">请稍候...</string>
    <string name="update_hint5">正在安装程序</string>
    <string name="update_hint6">安装失败：</string>
    <string name="update_hint7">温馨提示</string>
    <string name="update_hint8">必须授权才能安装APK，请设置允许安装</string>
    <string name="update_hint9">设置</string>
    <string name="update_hint10">稍后再说</string>
    <string name="update_hint11">立即更新</string>
    <string name="update_hint12">发现新版本，升级后体验更顺畅！\n不升级当前版本不可使用</string>

    <!--二维码-->
    <string name="zxing_h1">将二维码放入框内，即可自动扫描</string>
    <string name="zxing_h2">暂时无法开启闪光灯</string>
    <string name="zxing_h3">扫一扫</string>
    <string name="zxing_h4">正在扫描...</string>
    <string name="zxing_h5">CHO扫码转币</string>
    <string name="zxing_h6">保存相册</string>
    <string name="zxing_h7">正在生成二维码</string>
    <string name="zxing_h8">您暂未开通支付功能，如需开通，请点击确认按钮</string>
    <string name="zxing_h9">请完善商户信息</string>
    <string name="zxing_h10">正在为您开通支付功能，请稍后...</string>
    <string name="zxing_h11">扫码支付功能已经开通</string>
    <string name="zxing_h12">扫码转币</string>
    <string name="zxing_h13">您暂未开通商户，确认前往开通商户？</string>
    <string name="zxing_h14">您申请的商户正在审核中...</string>
    <string name="zxing_h15">感谢您的申请，系统综合评估您的条件后发现暂未达到准入标准，请达到准入标准后在申请！</string>
    <string name="zxing_h16">正在为您开通收币功能，请稍后...</string>
    <string name="zxing_h17">收币功能已经开通</string>
    <string name="zxing_h18">您暂未开通收币功能，如需开通，请点击确认按钮</string>
    <string name="zxing_h19">您已经是商户了，无需再次申请</string>
    <string name="zxing_h20">分享给好友</string>
    <string name="zxing_h21">保存成功</string>
    <string name="zxing_h22">正在生成分享图片，请稍后...</string>
    <string name="zxing_h23">图片已保存</string>
    <string name="zxing_h24">转币记录</string>
    <string name="zxing_h25">收币二维码</string>
    <string name="zxing_h26">相册</string>
    <string name="zxing_h27">选择二维码图片</string>
    <string name="zxing_h28">图片格式错误</string>
    <string name="zxing_h29">请按生成的金额充值，否则将充值失败（充值时必须输入后两位小数）。</string>
    <string name="zxing_h30">充值金额（元）</string>
    <string name="zxing_h31">保存二维码</string>
    <string name="zxing_h32">保存二维码到相册</string>
    <string name="zxing_h33">微信/支付宝扫一扫\n从相册选择此二维码</string>
    <string name="zxing_h34">按充值金额转帐\n否则将充值失败</string>
    <string name="zxing_h35">扫码支付</string>
    <string name="zxing_h36">银行名称</string>
    <string name="zxing_h37">银行卡号</string>
    <string name="zxing_h38">银行账户</string>
    <string name="zxing_h39">银联支付</string>
    <string name="zxing_h40">*请务必按照生成金额付款</string>

    <!--登录-->
    <string name="login_h1">请输入手机号码</string>
    <string name="login_h2">请输入密码</string>
    <string name="login_h3"><u>注册账号</u></string>
    <string name="login_h4"><u>忘记密码</u></string>
    <string name="login_h5">登录</string>
    <string name="login_h6">第三方登录</string>
    <string name="login_h7">正在登录...</string>
    <string name="login_h8">确认授权</string>
    <string name="login_h9">您的账号已被冻结，请及时与客服联系</string>
    <string name="login_h10">正在授权登录...</string>
    <string name="login_h11">授权失败</string>
    <string name="login_h12">请输入验证码</string>
    <string name="login_h13">该账户尚未激活，请完成人脸识别后进行操作</string>
    <string name="login_h14">还没有账号？</string>
    <string name="login_h15">登录授权</string>
    <string name="login_h16">国家/地区</string>

    <!--注册-->
    <string name="registered_h1">请输入手机号码</string>
    <string name="registered_h2">请输入验证码</string>
    <string name="registered_h3">请设置密码</string>
    <string name="registered_h4">请确认密码</string>
    <string name="registered_h5">请输入邀请码</string>
    <string name="registered_h6">已阅读并同意</string>
    <string name="registered_h7">《用户使用协议》</string>
    <string name="registered_h8">确认</string>
    <string name="registered_h9">注册</string>
    <string name="registered_h10">注册成功</string>
    <string name="registered_h11">请设置昵称</string>
    <string name="registered_h12">请输入相同的密码</string>
    <string name="registered_h13">该昵称可用</string>
    <string name="registered_h14">正在注册...</string>

    <!--忘记密码-->
    <string name="forgetpassword_h1">请输入手机号码</string>
    <string name="forgetpassword_h2">请输入验证码</string>
    <string name="forgetpassword_h3">请输入新密码</string>
    <string name="forgetpassword_h4">请再次输入新密码</string>
    <string name="forgetpassword_h5">确认</string>
    <string name="forgetpassword_h6">重设登录密码</string>
    <string name="forgetpassword_h7">请输入相同的密码</string>
    <string name="forgetpassword_h8">重置密码成功</string>
    <string name="forgetpassword_h9">正在重置密码，请稍后...</string>


    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>

</resources>
