<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/bg_upgrade"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="30dp"
            android:text="@string/update_hint"
            android:textColor="@color/black1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="30sp"
            android:text="@string/update_hint12"
            android:textColor="@color/black1"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:visibility="gone"
            android:background="@color/xian" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/update_hint10"
                android:textColor="@color/black1"
                android:textSize="15sp" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:background="@color/xian" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/update_hint11"
                android:textColor="@color/black1"
                android:textSize="15sp" />


        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/dismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="14dp"
        android:src="@mipmap/ic_delete"
        android:visibility="gone" />
</LinearLayout>