<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/yuanjiao_5_baise"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="14dp">


            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:text="@string/app_prompt"
                android:textColor="@color/txt_black"
                android:textSize="16sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:paddingBottom="14dp"
            android:text=""
            android:textColor="@color/txt_black1"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:padding="14dp"
                android:text="@string/app_confirm"
                android:textColor="@color/blue"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black5" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:padding="14dp"
                android:text="@string/app_cancel"
                android:textColor="@color/blue"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/dismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="8dp"
        android:visibility="gone"
        android:src="@mipmap/ic_delete" />
</LinearLayout>