<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher" />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/yuanjiao_5_baiseyinying"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginLeft="20dp"/>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="20dp"
                    android:background="@color/xian" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:drawablePadding="90dp"
                    android:gravity="center_vertical"
                    android:hint="@string/login_h1"
                    android:background="@color/transparent"
                    android:inputType="phone"
                    android:paddingRight="14dp"
                    android:singleLine="true"
                    android:textColor="@color/black1"
                    android:textColorHint="@color/black3"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/yuanjiao_5_baiseyinying"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginLeft="20dp"/>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="20dp"
                    android:background="@color/xian" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:drawablePadding="90dp"
                    android:gravity="center_vertical"
                    android:hint="@string/login_h2"
                    android:background="@color/transparent"
                    android:inputType="textPassword"
                    android:paddingRight="14dp"
                    android:singleLine="true"
                    android:textColor="@color/black1"
                    android:textColorHint="@color/black3"
                    android:textSize="15sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="33dp"
                    android:onClick="onClick"
                    android:padding="14dp"
                    android:text="一键登录"
                    android:textColor="@color/black2"
                    android:textSize="13sp" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="33dp"
                    android:onClick="onClick"
                    android:padding="14dp"
                    android:text="@string/login_h4"
                    android:textColor="@color/black2"
                    android:textSize="13sp" />
            </LinearLayout>



            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:paddingBottom="14dp"
                    android:paddingTop="14dp"
                    android:text="@string/login_h14"
                    android:textColor="@color/black1"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:paddingBottom="14dp"
                    android:paddingRight="14dp"
                    android:paddingTop="14dp"
                    android:text="@string/login_h3"
                    android:textColor="@color/red"
                    android:textSize="13sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_img_login"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/login_h5"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="15sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>